[package]
name = "synapse"
description = ""
version = "0.0.1"
edition = "2021"
authors = ["hvlck <just.ethan@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/noctiverse/synapse"
repository = "https://github.com/noctiverse/synapse"
license = "Apache-2.0"
publish = false

[dependencies]
